# zaakchat

./: .gitignore  Caddyfile  Cargo.toml  Dockerfile  README.md  deploy.sh  docker-compose.yml  full_schema.json  package.json  playwright.config.ts  pnpm-lock.yaml  test_email.json  test_notification.json  tsconfig.json
.github/workflows/: ci.yml  docker-publish.yml  e2e.yml  pipeline.yml
.husky/: pre-commit
frontend/: index.html  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/public/: manifest.json  sw.js
frontend/scripts/: bump-sw.js
frontend/src/: App.tsx  config.ts  index.css  types.ts
frontend/src/__tests__/: SSEContext.test.tsx
frontend/src/components/: CommentForm.tsx  ConnectionErrorBanner.tsx  CreateIssueForm.tsx  InstallPrompt.tsx  IssueHeader.tsx  IssueTimeline.tsx  Login.tsx  MarkdownRenderer.tsx  Modal.tsx  NotificationBell.tsx  PageHeader.tsx  Task.tsx  (+11 more)
llm_notes/: IMPLEMENTATION_OVERVIEW.md  PWA_IMPLEMENTATION.md  PWA_TESTING.md  QUICKSTART_STORAGE.md  README_STORAGE.md  STORAGE_ARCHITECTURE.md  STORAGE_SUMMARY.md  authzen_implementation_plan.md
scripts/: generate-types.js
src/: auth.rs  authzen.rs  email.rs  graphql.rs  handlers.rs  issues.rs  lib.rs  main.rs  schemas.rs  search.rs  storage.rs
tests/: helpers.ts  involved-user-flow.spec.ts  sse-demo.spec.ts  sse-demo.spec.ts.bak  tantivy_hyphen_test.rs  tantivy_search_test.rs
topaz/: run.sh  topaz.json
topaz/certs/: gateway-ca.crt  gateway.crt  gateway.key  grpc-ca.crt  grpc.crt  grpc.key
topaz/cfg/: config.yaml
topaz/model/: manifest.yaml
(+22 files in other folders)
