[package]
name = "zaakchat"
version = "0.1.0"
edition = "2021"
default-run = "zaakchat"

[features]
default = []
local = []

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "5.5"
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"
futures-util = "0.3"
uuid = { version = "1.0", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
schemars = { version = "0.8", features = ["uuid1", "chrono"] }
utoipa = { version = "5.0", features = ["axum_extras", "chrono", "uuid", "non_strict_integers"] }
utoipa-axum = "0.2"
serde_yaml = "0.9"
web-push = "0.9"
base64 = "0.22"
redb = "2.1"
tantivy = "0.22"
tempfile = "3.0"
bincode = "1.3"
regex = "1.12.2"
jsonwebtoken = { version = "9", default-features = false }
async-trait = "0.1.89"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
dotenv = "0.15.0"

[[bin]]
name = "export_schemas"
path = "src/bin/export_schemas.rs"

[[bin]]
name = "generate_asyncapi"
path = "src/bin/generate_asyncapi.rs"

[[bin]]
name = "zaakchat"
path = "src/main.rs"
